# reservation_management

./: Cargo.toml
migrations/2023-02-22-014647_create_users_table/: up.sql
migrations/2023-02-22-035727_create_facilities_table/: down.sql  up.sql
migrations/2023-02-22-035754_create_reservations_table/: down.sql  up.sql
migrations/2023-02-22-035850_create_reservation_statuses_table/: down.sql  up.sql
src/: main.rs  models.rs  schema.rs
src/models/: facility.rs  mod.rs  reservation.rs  reservation_status.rs  user.rs
src/static/: asset-manifest.json  index.html
src/static/static/css/: main.d3a479a0.css  main.d3a479a0.css.map
src/static/static/js/: main.ddd4c955.js  main.ddd4c955.js.map  main.eb4d26dc.js  main.eb4d26dc.js.map
src/templates/: index.hbs
