[package]
name = "reservation_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4.7", features = ["mysql"] }
dotenv = "0.15.0"
actix-web = "4.0.0"
actix-files = "0.6.2"