[package]
name = "reservation_management"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
handlebars = "4.3.6"
chrono = { version = "0.4.23", features = ["serde"] }
diesel = { version = "2.0.3", features = ["mysql"] }
dotenv = "0.15.0"
actix-web = "4.3.0"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.93"
